--- a/recipes/ChocolateYuleLog.html
+++ b/recipes/ChocolateYuleLog.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>Chocolate Yule Log Recipe</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-
-        <a href="recipes/ChocolateYuleLog.html">Chocolate Yule Log</a>
+    <h1>Chocolate Yule Log</h1>
 </body>
 </html>
