--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-
-        <a href="recipes/ChocolateYuleLog.html">Chocolate Yule Log</a>
+        <ul>
+            <li><a href="recipes/ChocolateYuleLog.html">Chocolate Yule Log</a></li>
+            <li><a href="recepies/HoneyGlazedChicken.html">Honey Glazed Chicken</a></li>
+            <li><a href="recipes/SalsaChicken.html">Salsa Chicken</a></li>
+        </ul>
+        
 </body>
 </html>
